--- a/src/css/_modal.scss
+++ b/src/css/_modal.scss
@@ -22,6 +22,10 @@
     opacity: 1;
 }
 
+.lightbox.light{
+    background-color: #00000036;
+}
+
 .modal{
     position: relative;
     cursor: default;
