--- a/src/css/master.css
+++ b/src/css/master.css
@@ -9,6 +9,8 @@ $light_darkBase: #8d8d8d; */
   width: 100%;
   background-color: transparent;
   height: 55px;
+  /* padding: 0 30px; */
+  /* adds padding without shrinking width*/
   transition-property: background-color, box-shadow;
   transition-duration: 0.3s;
   z-index: 100;
@@ -17,6 +19,7 @@ $light_darkBase: #8d8d8d; */
 #portfolio_header .group {
   align-self: center;
   padding-bottom: 5px;
+  margin-right: 20px;
   align-items: center;
 }
 #portfolio_header a {
@@ -46,9 +49,6 @@ $light_darkBase: #8d8d8d; */
 #portfolio_header .group:first-of-type {
   margin-left: 20px;
 }
-#portfolio_header .group:last-of-type {
-  margin-right: 30px;
-}
 
 #portfolio_header.detached {
   background-color: rgba(255, 255, 255, 0.95);
@@ -68,6 +68,58 @@ $light_darkBase: #8d8d8d; */
   background-color: #6568ff12;
 }
 
+#portfolio_header #open_menu_btn {
+  font-size: 1.7em;
+}
+
+#toggle_menu {
+  pointer-events: none;
+  position: fixed;
+  top: 0;
+  right: -50px;
+  height: 100vh;
+  background-color: white;
+  padding: 15px 20px 0px 20px;
+  text-align: right;
+  opacity: 0;
+  z-index: 102;
+  /*above lightbox*/
+  transition-property: opacity, right;
+  transition-duration: 0.5s;
+}
+#toggle_menu a {
+  font-size: 1.5em;
+  color: #464e79;
+  margin: 10px 0;
+}
+
+#toggle_menu.active {
+  pointer-events: auto;
+  opacity: 1;
+  right: 0px;
+}
+
+@media (max-width: 1100px) {
+  .visible_mobile {
+    display: none;
+  }
+}
+/*
+@media (max-width: 800px) {
+	.card_project{
+		width: 44vw;
+	
+	}
+}*/
+@media (max-width: 570px) {
+  .visible_normal {
+    display: none !important;
+  }
+
+  .visible_mobile {
+    display: inline-block !important;
+  }
+}
 html {
   scroll-behavior: smooth;
 }
@@ -435,6 +487,7 @@ strong {
 }
 .work_card .card_head .role {
   flex-grow: 1;
+  padding: 0 10px 0 0;
 }
 .work_card .card_head .role .role_name {
   text-transform: uppercase;
@@ -477,8 +530,10 @@ strong {
 
 @media (max-width: 570px) {
   .work_card {
-    font-size: 0.9em;
     width: 90vw;
+  }
+  .work_card .content_right {
+    padding: 10px 15px;
   }
 }
 .card_activity_wrapper {
@@ -531,6 +586,10 @@ strong {
   pointer-events: auto;
   cursor: pointer;
   opacity: 1;
+}
+
+.lightbox.light {
+  background-color: #00000036;
 }
 
 .modal {
