--- a/src/css/_mainLayout.scss
+++ b/src/css/_mainLayout.scss
@@ -134,7 +134,8 @@ strong{
 }
 
 #contact{
-	background-color: white;
+	background-color: $light_extraDarkKey;
+	color: $light_text2;
 }
 
 #footer{
