--- a/src/css/_cards_project.scss
+++ b/src/css/_cards_project.scss
@@ -38,10 +38,10 @@ $PROJ_CARD_BORDER: #cecece;
 		/* background-color: #c7c7c7;*/
 		height: fit-content;
 		padding: 8px;
-		-webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
-		  filter: grayscale(100%);
+		-webkit-filter: grayscale(70%); /* Safari 6.0 - 9.0 */
+		  filter: grayscale(70%);
 		overflow: hidden;
-		opacity: 0.3;
+		opacity: 0.5;
 		  
 		transition-property: filter, opacity;
 		transition-duration: 0.7s;
@@ -154,5 +154,12 @@ $width-expand-dur: 0.2s;
 		width: 85vw;
 		/*font-size:0.9em;*/
 		height: auto;
+
+		.thumbnail{
+			-webkit-filter: grayscale(0%); /* Safari 6.0 - 9.0 */
+			filter: grayscale(0%);
+
+			opacity: 1;
+		}
 	}
 }
