--- a/src/css/master.css
+++ b/src/css/master.css
@@ -77,6 +77,7 @@ $light_darkBase: #8d8d8d; */
   position: fixed;
   top: 0;
   right: -50px;
+  width: 40vw;
   height: 100vh;
   background-color: white;
   padding: 15px 20px 0px 20px;
@@ -99,9 +100,9 @@ $light_darkBase: #8d8d8d; */
   right: 0px;
 }
 
-@media (max-width: 1100px) {
+@media (min-width: 570px) {
   .visible_mobile {
-    display: none;
+    display: none !important;
   }
 }
 /*
@@ -249,7 +250,8 @@ strong {
 }
 
 #contact {
-  background-color: white;
+  background-color: #3e458b;
+  color: #b4bdff;
 }
 
 #footer {
@@ -363,11 +365,11 @@ strong {
   /* background-color: #c7c7c7;*/
   height: fit-content;
   padding: 8px;
-  -webkit-filter: grayscale(100%);
+  -webkit-filter: grayscale(70%);
   /* Safari 6.0 - 9.0 */
-  filter: grayscale(100%);
+  filter: grayscale(70%);
   overflow: hidden;
-  opacity: 0.3;
+  opacity: 0.5;
   transition-property: filter, opacity;
   transition-duration: 0.7s;
 }
@@ -454,6 +456,12 @@ strong {
     /*font-size:0.9em;*/
     height: auto;
   }
+  .card_project .thumbnail {
+    -webkit-filter: grayscale(0%);
+    /* Safari 6.0 - 9.0 */
+    filter: grayscale(0%);
+    opacity: 1;
+  }
 }
 .work_card_wrapper {
   width: 100%;
@@ -533,7 +541,7 @@ strong {
     width: 90vw;
   }
   .work_card .content_right {
-    padding: 10px 15px;
+    padding: 15px 15px;
   }
 }
 .card_activity_wrapper {
@@ -566,6 +574,18 @@ strong {
   text-decoration: underline;
 }
 
+@media (max-width: 570px) {
+  .card_activity {
+    background-color: transparent;
+    padding: 30px 10px;
+    width: 100%;
+    border-bottom: 1px solid #c8c7e5;
+  }
+
+  .content .card_activity:last-of-type {
+    border-bottom: 0px solid;
+  }
+}
 .lightbox {
   position: fixed;
   top: 0;
@@ -715,7 +735,10 @@ strong {
 @media (max-width: 570px) {
   .modal {
     width: 100vw;
-    font-size: 0.8em;
+  }
+
+  .lightbox.active .modal {
+    margin-top: 0px;
   }
 }
 .shift-card-move {
