--- a/src/css/master.css
+++ b/src/css/master.css
@@ -281,11 +281,28 @@ strong {
 #intro .big_title {
   font-size: 3.2em;
   font-weight: bold;
+  color: #5a68ec;
+  text-decoration: none;
+}
+#intro a.big_title:hover {
+  text-decoration: underline;
+}
+#intro h2.stick {
+  margin-top: 4px;
+  color: #5a68ec;
 }
 #intro h1 {
   font-size: 1.5em;
 }
 
+@media (max-width: 570px) {
+  #intro .big_title {
+    font-size: 2.5em;
+  }
+  #intro h2 {
+    font-size: 1.5em;
+  }
+}
 /* style will be added soon */
 #key_skills {
   border: 4px solid #f1f1f1;
