--- a/src/css/_cards_work.scss
+++ b/src/css/_cards_work.scss
@@ -34,6 +34,9 @@
     }
 
     .card_head{
+        display:flex;
+        flex-direction: row;
+
         .role{
             flex-grow: 1;
             padding: 0 10px 0 0;
@@ -91,9 +94,16 @@
 @media (max-width: 570px) {
 	.work_card{
         width: $CONTENT_WIDTH_MOBILE;
+        .card_head{
+            flex-direction: column;
 
+            .year{
+                align-self: flex-end;
+                border-left: 0px solid;
+            }
+        }
         .content_right{
-            padding: 15px 15px;
+            padding: 15px 12px 15px 20px;
         }
 	}
 }
