--- a/src/css/master.css
+++ b/src/css/master.css
@@ -18,7 +18,6 @@ $light_darkBase: #8d8d8d; */
 }
 #portfolio_header .group {
   align-self: center;
-  padding-bottom: 5px;
   margin-right: 20px;
   align-items: center;
 }
@@ -356,6 +355,7 @@ strong {
 }
 .cardlist {
   justify-content: center;
+  margin-top: 20px;
 }
 
 .card_project {
@@ -510,6 +510,10 @@ strong {
   flex-grow: 1;
   padding: 30px 35px;
 }
+.work_card .card_head {
+  display: flex;
+  flex-direction: row;
+}
 .work_card .card_head .role {
   flex-grow: 1;
   padding: 0 10px 0 0;
@@ -557,8 +561,15 @@ strong {
   .work_card {
     width: 90vw;
   }
+  .work_card .card_head {
+    flex-direction: column;
+  }
+  .work_card .card_head .year {
+    align-self: flex-end;
+    border-left: 0px solid;
+  }
   .work_card .content_right {
-    padding: 15px 15px;
+    padding: 15px 12px 15px 20px;
   }
 }
 .card_activity_wrapper {
@@ -599,7 +610,7 @@ strong {
     border-bottom: 1px solid #c8c7e5;
   }
 
-  .content .card_activity:last-of-type {
+  .content .card_activity_wrapper:last-of-type .card_activity {
     border-bottom: 0px solid;
   }
 }
