Add option to render skill name to be smaller if data specifies

--- a/src/css/_aboutMeLayout.scss
+++ b/src/css/_aboutMeLayout.scss
@@ -38,6 +38,10 @@ $SKILLITEM_WIDTH: 23%;
         .subskill_content li{
             list-style-type: none;
             padding: 5px;
+            font-size: 1.1em;
+        }
+        .subskill_content li.is_small{
+            font-size: 0.7em;
         }
     }
     
