--- a/src/css/_aboutMeLayout.scss
+++ b/src/css/_aboutMeLayout.scss
@@ -20,17 +20,19 @@ $SKILLITEM_WIDTH: 23%;
     .subskill_group{
         flex-grow: 1;
         margin: 10px 5px;
+        width: 23%;
 
         .subskill_title{
             background-color: #dad9e9;
-            padding: 10px;
+            padding: 6px 15px;
             color: $light_text1;
         }
 
         .subskill_content{
             flex-shrink: 0;
             height: fit-content;
-            margin: 0px; padding: 10px 15px;
+            margin: 0px; 
+            padding: 6px 10px;
             background-color: $light_lightBase;
             border-bottom: 2px solid #dbdbdb;
         }
@@ -38,7 +40,7 @@ $SKILLITEM_WIDTH: 23%;
         .subskill_content li{
             list-style-type: none;
             padding: 5px;
-            font-size: 1.1em;
+            font-size: 1em;
         }
         .subskill_content li.is_small{
             font-size: 0.7em;
@@ -57,8 +59,27 @@ $SKILLITEM_WIDTH: 23%;
 }
 
 
+
+@media (max-width: 880px) {
+	#key_skills{
+        .subskill_group{
+            width: 30%;
+        }
+    }
+}
+
 @media (max-width: 570px) {
     .me_description{
         padding: 0px 15px;
+    }
+
+
+    #key_skills{
+        .skill_list{
+            padding: 0;
+        }
+        .subskill_group{
+            width: 45%;
+        }
     }
 }
