--- a/src/css/_modal.scss
+++ b/src/css/_modal.scss
@@ -1,3 +1,5 @@
+$MOBILE_HEADER_HEIGHT: 50px;
+
 .lightbox{
     position: fixed;
     top: 0; left: 0;
@@ -20,11 +22,31 @@
     pointer-events: auto;
     cursor: pointer;
     opacity: 1;
+
+    .modal{
+        margin-top: 30px;
+    }  
 }
+
 
 .lightbox.light{
     background-color: #00000036;
 }
+
+.modal_control{
+    position: fixed;
+    top:0; left: 0;
+    flex-shrink: 0;
+    height: $MOBILE_HEADER_HEIGHT;
+    width: 100%;
+    background-color: $light_extraDarkKey;
+
+    color: white;
+    font-size: 30px;
+    z-index: 101;
+    
+}
+
 
 .modal{
     position: relative;
@@ -158,9 +180,7 @@
 }
 
 
-.lightbox.active .modal{
-    margin-top: 30px;
-}
+
 
 
 @media (max-width: 800px) {
@@ -176,6 +196,10 @@
 
         .modal_unit{
             padding: 18px 5px 18px 5px;
+
+            .content_unit{
+                margin: 10px 15px 30px 15px;
+            }
         }
         .modal_unit.title{
             padding: 18px 25px 18px 25px;
@@ -185,7 +209,12 @@
         }
     }
     
-    .lightbox.active .modal{
-        margin-top: 0px;
+    .lightbox.active{
+
+        .modal{
+            margin-top: $MOBILE_HEADER_HEIGHT;
+        }  
     }
+
+    
 }
