--- a/src/css/master.css
+++ b/src/css/master.css
@@ -671,9 +671,25 @@ strong {
   cursor: pointer;
   opacity: 1;
 }
+.lightbox.active .modal {
+  margin-top: 30px;
+}
 
 .lightbox.light {
   background-color: #00000036;
+}
+
+.modal_control {
+  position: fixed;
+  top: 0;
+  left: 0;
+  flex-shrink: 0;
+  height: 50px;
+  width: 100%;
+  background-color: #3e458b;
+  color: white;
+  font-size: 30px;
+  z-index: 101;
 }
 
 .modal {
@@ -786,10 +802,6 @@ strong {
   font-size: 1.5em;
 }
 
-.lightbox.active .modal {
-  margin-top: 30px;
-}
-
 @media (max-width: 800px) {
   .modal {
     width: 85vw;
@@ -803,6 +815,9 @@ strong {
   .modal .modal_unit {
     padding: 18px 5px 18px 5px;
   }
+  .modal .modal_unit .content_unit {
+    margin: 10px 15px 30px 15px;
+  }
   .modal .modal_unit.title {
     padding: 18px 25px 18px 25px;
   }
@@ -811,7 +826,7 @@ strong {
   }
 
   .lightbox.active .modal {
-    margin-top: 0px;
+    margin-top: 50px;
   }
 }
 .shift-card-move {
