--- a/src/css/_modal.scss
+++ b/src/css/_modal.scss
@@ -44,6 +44,12 @@ $MOBILE_HEADER_HEIGHT: 50px;
     color: white;
     font-size: 30px;
     z-index: 101;
+
+    .modal_control_content{
+        height: 100%;
+        padding: 0 10px;
+        align-items: center;
+    }
     
 }
 
