--- a/src/css/master.css
+++ b/src/css/master.css
@@ -691,6 +691,11 @@ strong {
   font-size: 30px;
   z-index: 101;
 }
+.modal_control .modal_control_content {
+  height: 100%;
+  padding: 0 10px;
+  align-items: center;
+}
 
 .modal {
   position: relative;
