--- a/src/css/_vars.scss
+++ b/src/css/_vars.scss
@@ -11,6 +11,7 @@ $light_darkBase: #8d8d8d; */
 
 $light_extralightKey: #f1f1ff;
 $light_lightKey: #7978b1;
+$light_lighterKey: #8095ff;
 $light_mediumKey: #6568ff;
 $light_darkKey: #4c57bf;
 $light_extraDarkKey: #3e458b;
