Add button on contact section

--- a/src/css/_mainLayout.scss
+++ b/src/css/_mainLayout.scss
@@ -153,13 +153,15 @@ strong{
 #contact{
 	background-color: $light_extraDarkKey;
 	color: $light_text2;
+
+	padding-bottom: 140px;
 }
 
 #footer{
 	padding: 20px;
 	justify-content: flex-end;
 
-	background-color: $light_extraDarkKey;
+	background-color: #323870;
 	color: $light_text2;
 }
 
