--- a/src/css/master.css
+++ b/src/css/master.css
@@ -183,6 +183,18 @@ strong {
   flex-grow: 1;
 }
 
+.btn_large {
+  display: inline-block;
+  padding: 13px 18px;
+  background-color: #8095ff;
+  border-radius: 10px;
+  text-decoration: none;
+  color: white;
+}
+.btn_large .icon {
+  font-size: 1.3em;
+}
+
 .portfolio_wrapper {
   width: 100%;
   height: 100%;
@@ -251,12 +263,13 @@ strong {
 #contact {
   background-color: #3e458b;
   color: #b4bdff;
+  padding-bottom: 140px;
 }
 
 #footer {
   padding: 20px;
   justify-content: flex-end;
-  background-color: #3e458b;
+  background-color: #323870;
   color: #b4bdff;
 }
 
@@ -280,7 +293,7 @@ strong {
 #intro .big_title {
   font-size: 3.2em;
   font-weight: bold;
-  color: #5a68ec;
+  color: #464e79;
   text-decoration: none;
 }
 #intro a.big_title:hover {
@@ -288,10 +301,15 @@ strong {
 }
 #intro h2.stick {
   margin-top: 4px;
-  color: #5a68ec;
 }
 #intro h1 {
   font-size: 1.5em;
+}
+#intro .softer_color {
+  color: #7e7aa8;
+}
+#intro .button_container {
+  display: inline-block;
 }
 
 @media (max-width: 570px) {
@@ -300,6 +318,17 @@ strong {
   }
   #intro h2 {
     font-size: 1.5em;
+  }
+  #intro #career_summary {
+    font-size: 1.2em;
+  }
+  #intro #career_message {
+    font-size: 1.1em;
+    font-weight: bold;
+  }
+  #intro .button_container {
+    width: 100%;
+    padding-top: 12px;
   }
 }
 /* style will be added soon */
