--- a/src/css/_mainLayout.scss
+++ b/src/css/_mainLayout.scss
@@ -76,7 +76,15 @@ strong{
 	padding: 20px 27px;
 	font-size: 1.2em;
 }
+.btn.large.static{
+	background-color: transparent;
+	padding: 20px 27px;
+	font-size: 1.2em;
+}
 
+p.tight{
+	margin: 0 0 5px 0;
+}
 
 
 .portfolio_wrapper{
