--- a/src/css/_header.scss
+++ b/src/css/_header.scss
@@ -47,6 +47,20 @@
         text-decoration: none;
         background-color: #ffffff29;
     }
+
+    a.menu_resume{
+        width: fit-content;
+        border: 1px solid $light_mediumKey;
+        border-radius: 5px;
+        padding: 7px 12px;
+        margin-left: 10px;
+
+        color: $light_mediumKey;
+
+    }
+    a.menu_resume:hover{
+        background-color: #6568ff12;
+    }
     
     .group:first-of-type{
         margin-left: 20px;
@@ -81,12 +95,14 @@
 }
 
 #toggle_menu{
+    align-items: flex-end;
     pointer-events: none;
     position: fixed;
     top:0; 
     right:-50px;
     width: 40vw;
     height: 100vh;
+
     background-color: white;
     padding: 15px 20px 0px 20px;
 
