--- a/src/css/_modal.scss
+++ b/src/css/_modal.scss
@@ -118,6 +118,7 @@ $MOBILE_HEADER_HEIGHT: 50px;
     }
 
     .image_header{
+        cursor: grab;
         height: 280px;
         overflow-x: scroll;
         overflow-y: hidden;
@@ -134,6 +135,9 @@ $MOBILE_HEADER_HEIGHT: 50px;
             height: 100%;
             width: auto;
         }
+    }
+    .image_header.grabbed{
+        cursor: grabbing;
     }
 
     .title{
