Allow other type of cursor to appear when on modal

--- a/src/css/_modal.scss
+++ b/src/css/_modal.scss
@@ -56,7 +56,7 @@ $MOBILE_HEADER_HEIGHT: 50px;
 
 .modal{
     position: relative;
-    cursor: default;
+    cursor: auto;
 
     align-self: center;
 
