--- a/src/css/master.css
+++ b/src/css/master.css
@@ -849,6 +849,10 @@ p.tight {
 .modal .image_header.grabbed {
   cursor: grabbing;
 }
+.modal .image_header.is_empty {
+  height: 8px;
+  background-color: #f1f1f1;
+}
 .modal .title {
   background-color: #f1f1f1;
   font-size: 1.5em;
