--- a/src/css/master.css
+++ b/src/css/master.css
@@ -276,6 +276,7 @@ p.tight {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  background-color: #f1eff9;
   height: 100vh;
 }
 
@@ -284,7 +285,8 @@ p.tight {
 }
 
 .block#workexp {
-  background-color: #dddddf;
+  /* background-color: $light_mediumBase; */
+  background-color: #e4e4f1;
 }
 
 #contact {
