--- a/src/css/_header.scss
+++ b/src/css/_header.scss
@@ -21,7 +21,7 @@
     }
 
     a {
-        color: $light_extralightKey;
+        color: lighten($HEADER_TEXT, 5%);
         padding: 0 5px;
 
         transition-property: color;
@@ -35,11 +35,12 @@
     a.logo{
         font-size: 1.5em;
         font-weight: bold;
+        color: $HEADER_TEXT;
     }
 
     a.resume{
         border-radius: 5px;
-        border: 1px solid white;
+        border: 1px solid darken($HEADER_TEXT, 5%);
         padding: 7px 12px;
         margin-left: 10px;
     }
