--- a/src/css/_vars.scss
+++ b/src/css/_vars.scss
@@ -50,6 +50,8 @@ $dark_text1: #b59e7a;
 $hl-blue: #99cfb9;
 
 /* Layout variables */
+$MOBILE_WINDOW_WIDTH: 650px;
+
 $content_width: 80vw;
 $CONTENT_WIDTH_MOBILE: 90vw;
 $WORK_EXP_MAX_WIDTH: 720px;
