--- a/src/css/master.css
+++ b/src/css/master.css
@@ -116,7 +116,7 @@ $light_darkBase: #8d8d8d; */
   right: 0px;
 }
 
-@media (min-width: 570px) {
+@media (min-width: 650px) {
   .visible_mobile {
     display: none !important;
   }
@@ -128,7 +128,7 @@ $light_darkBase: #8d8d8d; */
 
 	}
 }*/
-@media (max-width: 570px) {
+@media (max-width: 650px) {
   .visible_normal {
     display: none !important;
   }
@@ -311,7 +311,7 @@ p.tight {
   font-size: 0.8em;
 }
 
-@media (max-width: 570px) {
+@media (max-width: 650px) {
   .content {
     font-size: 0.9em;
   }
@@ -590,7 +590,7 @@ p.tight {
     width: 44vw;
   }
 }
-@media (max-width: 570px) {
+@media (max-width: 650px) {
   .card_project {
     width: 85vw;
     /*font-size:0.9em;*/
@@ -844,10 +844,10 @@ p.tight {
   height: 280px;
   overflow-x: scroll;
   overflow-y: hidden;
+  padding: 10px 0;
 }
 .modal .image_header .image_item {
-  width: fit-content;
-  border-left: 5px solid #2e2e2e;
+  width: 80%;
   text-align: center;
 }
 .modal .image_header .image_item:first-of-type {
@@ -856,6 +856,9 @@ p.tight {
 .modal .image_header img {
   height: 100%;
   width: auto;
+  -webkit-box-shadow: 2px 2px 9px -1px rgba(0, 0, 0, 0.18);
+  -moz-box-shadow: 2px 2px 9px -1px rgba(0, 0, 0, 0.18);
+  box-shadow: 2px 2px 9px -1px rgba(0, 0, 0, 0.18);
 }
 .modal .image_header.grabbed {
   cursor: grabbing;
@@ -908,7 +911,7 @@ p.tight {
     font-size: 0.9em;
   }
 }
-@media (max-width: 570px) {
+@media (max-width: 650px) {
   .modal {
     width: 100vw;
   }
@@ -922,7 +925,7 @@ p.tight {
     padding: 18px 25px 18px 25px;
   }
   .modal .image_header {
-    height: 200px;
+    height: 250px;
   }
 
   .lightbox.active .modal {
