Layout adjustment in the splash section

--- a/src/css/_header.scss
+++ b/src/css/_header.scss
@@ -43,6 +43,7 @@
         border: 1px solid darken($HEADER_TEXT, 5%);
         padding: 7px 12px;
         margin-left: 10px;
+        margin-top: 5px;
     }
     a.resume:hover{
         text-decoration: none;
